# switchmappy

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  site.yml.example
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml
docs/: README.ja.md  README.md  commands.ja.md  commands.md  configuration.ja.md  configuration.md  index.html  migration_notes.ja.md  migration_notes.md  onboarding.ja.md  onboarding.md  pages.ja.md  pages.md  snmp_cml_validation.ja.md  snmp_cml_validation.md  specification.ja.md  specification.md  switch_cli_output_research.md  switchmap_gap_analysis.ja.md  switchmap_gap_analysis.md  testing.ja.md  testing.md  usage.ja.md  usage.md
scripts/: check_docs_links.py  collect_cml_snmpwalk.py  generate_onboarding_demo.py
switchmap_py/: artifacts.py  cli.py  collectors.py  config.py  demo.py  oui.py
switchmap_py/importers/: __init__.py  arp_csv.py  arp_snmp.py  hostname_csv.py  hostname_resolver.py
tests/: test_arp_csv_importer.py  test_arp_snmp_importer.py  test_build_html.py  test_build_report_integration.py  test_build_site.py  test_cli_build_html_integration.py  test_cli_demo.py  test_cli_get_arp.py  test_cli_get_arp_snmp.py  test_cli_json_logging.py  test_collection_dispatch.py  test_collectors.py  test_collectors_logging.py  test_config.py  test_encoding_and_determinism.py  test_hostname_csv.py  test_hostname_resolver.py  test_idlesince_store.py  test_logging_schema.py  test_mac_correlation_render.py  test_maclist_store.py  test_oui.py  test_scan_switch.py  test_search_server.py  test_search_server_e2e.py  test_snmp_session.py  test_ssh_collectors.py  test_ssh_session.py  test_synthetic_fixture_policy.py  test_vlan_page.py
(+31 files in other folders)
