# Copyright 2024 OpenAI
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# This file was created or modified with the assistance of an AI (Large Language Model).
# Review required for correctness, security, and licensing.

[project]
name = "switchmap-py"
version = "0.1.0"
description = "Python reimplementation of dotysan/switchmap"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "OpenAI Codex"}]
keywords = ["snmp", "network", "switchmap"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "typer>=0.24.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "pyyaml>=6.0.1",
  "jinja2>=3.1.3",
  "paramiko>=3.4.0",
]

[project.optional-dependencies]
search = ["fastapi>=0.135.3", "uvicorn>=0.44.0", "httpx>=0.28.1"]
snmp = ["pysnmp>=7.1.23"]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "ruff>=0.5.0",
  "mypy>=1.18.0",
  "pre-commit>=4.5.1",
]

[project.scripts]
switchmap = "switchmap_py.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]

testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
